# HazelEngineLearning

./: .gitignore  CMakeLists.txt  README.md
src/: Hazel.h
src/Hazel/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
src/Hazel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/Platform/Linux-x64/: Linux64Window.cpp  Linux64Window.h
